--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@
     top: 0;
     left: 0;
     object-fit: cover;
-    z-index: -1;
 }
 .box-1{
     position: relative;
@@ -149,8 +148,15 @@ h6{
     filter: drop-shadow(0 0 30px aqua);
     border-radius: 50px;
 }
+.tailwind{
+    width: 50%;
+    height: 10px;
+    background-color: aqua;
+    filter: drop-shadow(0 0 30px aqua);
+    border-radius: 50px;
+}
 h5{
-    margin: 100px;
+    margin: 100px 0 50px 50px;
     font-size: 50px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
